--- a/config/env/config.env
+++ b/config/env/config.env
@@ -23,4 +23,4 @@ RESET_PASSWORD_EXPIRE=3600000
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=doogubeylik34@gmail.com
-SMTP_PASS=2386HkDk.
+SMTP_PASS=your pass
